include_HEADERS = \
	assemble_node_descrip.h \
	assemble_particle.h \
	assemble_pbob.h \
	big_or_little_endian.h \
	calculate_divergence_v.h \
	calculate_divergence_v_thread_wrapper.h \
	calculate_particle_acceleration_boundary.h \
	calculate_particle_acceleration_interior.h \
	calculate_particle_acceleration_interior_thread_wrapper.h \
	calculate_particle_energy_deriv_boundary.h \
	calculate_particle_energy_deriv_interior.h \
	calculate_particle_energy_deriv_interior_thread_wrapper.h \
	calculate_particle_vorticity.h \
	check_for_nan.h \
	copy_h.h \
	copy_up_to_colon.h \
	create_particles.h \
	dfdx.h \
	dfdy.h \
	dfdz.h \
	dwdf.h \
	d2wdf2.h \
	dwdx.h \
	dwdy.h \
	dwdz.h \
	equation_of_state.h \
	free_matrix.h \
	free_node_info.h \
	free_particles.h \
	get_node_info_struct.h \
	get_pars.h \
	get_particle_acceleration.h \
	get_particle_energy_deriv.h \
	get_particle_energy.h \
	get_particle_position.h \
	get_particle_velocity.h \
	ids.h \
	initialize_pars.h \
	integrate_particle_acceleration_boundary.h \
	integrate_particle_acceleration_interior.h \
	integrate_particle_energy_boundary.h \
	integrate_particle_energy_interior.h \
	integrate_particle_velocity_boundary.h \
	integrate_particle_velocity_interior.h \
	nearest_integer.h \
	node_descrip.h \
	node_info.h \
	numeric_constants.h \
	pars.h \
	pars_include.h \
	particle.h \
	particles.h \
	pbob.h \
	push_and_pull_divv.h \
	push_and_pull_h.h \
	push_and_pull_n_and_x.h \
	push_and_pull_p.h \
	push_and_pull_rho.h \
	push_and_pull_u.h \
	push_and_pull_v.h \
	read_node_info.h \
	read_particle_info.h \
	set_n.h \
	set_initial_particles_state_1D.h \
	set_initial_particles_state_2D.h \
	set_initial_particles_state_3D.h \
	set_particle_acceleration.h \
	set_particle_density_boundary.h \
	set_particle_density_interior.h \
	set_particle_density_interior_thread_wrapper.h \
	set_particle_energy_deriv.h \
	set_particle_energy.h \
	set_particle_id_1D.h \
	set_particle_id_2D.h \
	set_particle_id_3D.h \
	set_particle_position.h \
	set_particle_velocity.h \
	sorting_functions.h \
	sph.h \
	sph_main.h \
	sph_types.h \
	starts_with_string.h \
        synchronize_node_info.h \
	thread_data.h \
	update_kernel.h \
	w.h \
	write_node_info.h \
	write_particle.h \
	write_particle_info.h \
	write_particles.h \
	write_pbob_node_descrip.h
