INCLUDES= -I$(top_srcdir)/include

SUBDIRS = \
        test

lib_LTLIBRARIES = libutil.la

libutil_la_SOURCES = \
	big_or_little_endian.c \
	check_for_nan.c \
	contains_string.c \
	copy_after_equal.c \
	copy_up_to_colon.c \
	initialize_pars.c \
	is_nan_or_inf.c \
	maximum_double.c \
	maximum_int.c \
	minimum_double.c \
	minimum_int.c \
	sorting_functions.c \
	starts_with_string.c \
	verbosity.c
